--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -79,6 +79,24 @@ const TAGS = {
 };
 
 const PROJECTS = [
+{
+        tittle: "Zdev la red social de desarrolladores",
+        description:
+            `Zdev es una red social diseñada específicamente para desarrolladores. En esta plataforma, puedes compartir fragmentos de código, participar en discusiones técnicas, publicar tus proyectos y mucho más. La aplicación está desarrollada con Next.js y utiliza Turso DB como base de datos principal. Cuenta con un sistema de recomendaciones personalizado que se adapta a tus lenguajes de programación favoritos. Además, todas las API routes están optimizadas con paginación, lo que garantiza un rendimiento eficiente incluso con grandes volúmenes de datos. zDev también incluye un sistema de notificaciones en tiempo real para mantenerte al tanto de las actualizaciones importantes, brindando una experiencia interactiva y dinámica.`,
+        img: "./project7.png",
+        tags: [TAGS.TYPESCRYPT, TAGS.NEXTJS, TAGS.TURSO],
+        github: "https://github.com/Drezxzx/zdev",
+        link: "https://zdev.es/",
+    },
+    {
+        tittle: "Translated.io",
+        description:
+            "Traductor creado en base a una api, que cuenta con todas las funcionalidaes de un traductor. Constuido con tecnologías frontend. Un diseño completamente responsive",
+        img: "./project2.png",
+        tags: [TAGS.TYPESCRYPT, TAGS.TAILWIND, TAGS.REACT, TAGS.NEXTJS],
+        github: "https://github.com/Drezxzx/tranlated.io",
+        link: "https://tranlated-io.vercel.app/",
+    },
     {
         tittle: "Acortador Url",
         description:
@@ -97,15 +115,7 @@ const PROJECTS = [
         github: "https://github.com/Drezxzx/coffe-landing-page",
         link: "https://coffe-landing-page-lemon.vercel.app/",
     },
-    {
-        tittle: "Translated.io",
-        description:
-            "Traductor creado en base a una api, que cuenta con todas las funcionalidaes de un traductor. Constuido con tecnologías frontend. Un diseño completamente responsive",
-        img: "./project2.png",
-        tags: [TAGS.TYPESCRYPT, TAGS.TAILWIND, TAGS.REACT, TAGS.NEXTJS],
-        github: "https://github.com/Drezxzx/tranlated.io",
-        link: "https://tranlated-io.vercel.app/",
-    },
+    
     {
         tittle: "Creador de codigosQR",
         description:
