--- a/src/components/Beadge.astro
+++ b/src/components/Beadge.astro
@@ -1,7 +1,7 @@
 <div class="flex text-white items-center animate-pulse">
     <span class="relative inline-flex hover:scale-105  transition overflow-hidden rounded-full p-[1px]">
       <span
-        class="absolute inset-[-1000%] animate-[spin_2s_linear_infinite] bg-[conic-gradient(from_90deg_at_50%_50%,#51E4B8_0%,#21554E_50%,#51E4B8_100%)]"
+        class="absolute inset-[-1000%] animate-[spin_2s_linear_infinite] bg-gradient-to-r from-purple-400 to-purple-500 rounded-full"
       ></span>
       <div class="inline-flex items-center justify-center w-full px-3 py-1 text-sm text-white  rounded-full cursor-pointer backdrop-blur-3xl whitespace-nowrap">
         <slot />
