--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ import Experience from '../components/Experience.astro'
 			</h1>
 			<h2 class="text-white text-xl lg:text-3xl max-w-[700px] text-wrap">
 				<span class="text-purple-400/90"
-					>8 meses de experiecia</span
+					>1 año de experiecia</span
 				>,
 				<span class="opacity-80">Desarrollador web.</span>
 				<span class="opacity-80">De Madrid, España 🇪🇸.</span>
