--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -5,7 +5,8 @@ const EXPERIENCE = [
         date : "Abril/2024-Octubre/2024",
         tittle : "Programador Junior ",
         place : "Digital Target",
-        description : "Desarrollo de software y cración de base de datos relacionales, transformación, exclución y explotación de datos. utilizando python, Access(VBA) y SQL"
+        description : "
+Fui responsable de la gestión integral del área informática de la empresa, abarcando desde el diseño y desarrollo de bases de datos hasta el análisis avanzado de datos. Creé aplicaciones internas para optimizar procesos mediante la explotación eficiente de la información. Además, desarrollé varias aplicaciones web privadas adaptadas a las necesidades de la organización, integrando funcionalidades específicas para la gestión de datos. Apliqué técnicas de web scraping con Node.js y Python para extraer información relevante de diversas fuentes y diseñé procesos automatizables que mejoraron notablemente la eficiencia operativa."
     },
 {
         date : "Febrero/2024-Marzo/2024",
