--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,6 +32,7 @@ import Experience from '../components/Experience.astro'
 				Hey, soy Andrés
 				<div class="flex items-center justify-center">
 					<a class="flex items-center justify-center"
+						target="_blank"
 						href="https://www.linkedin.com/in/andr%C3%A9s-rodr%C3%ADguez-3153a1299?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
 						><Beadge>Disponible para trabajar</Beadge></a
 					>
