--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -16,192 +16,196 @@ import Social from "./Social.astro";
 import React from "../icons/React.astro";
 
 const TAGS = {
-    PHP: {
-        name: "PHP",
-        class: "rounded-full bg-white/5 hover:scale-110 transition hover:bg-white/10 border border-white/10 flex justify-center items-center mg:gap-x-4 mg:py-2 mg:px-4 py-1 text-xs mg:text-base px-2",
-        icon: Php,
-    },
-    JS: {
-        name: "JS",
-        class: "rounded-full bg-white/5 hover:scale-110 transition hover:bg-white/10 border border-white/10 flex justify-center items-center mg:gap-x-4 mg:py-2 mg:px-4 py-1 text-xs mg:text-base px-2",
-        icon: Js,
-    },
-    HTML: {
-        name: "html",
-        class: "rounded-full bg-white/5 hover:scale-110 transition hover:bg-white/10 border border-white/10 flex justify-center items-center mg:gap-x-4 mg:py-2 mg:px-4 py-1 text-xs mg:text-base px-2",
-        icon: Html,
-    },
-    CSS: {
-        name: "css",
-        class: "rounded-full bg-white/5 hover:scale-110 transition hover:bg-white/10 border border-white/10 flex justify-center items-center mg:gap-x-4 mg:py-2 mg:px-4 py-1 text-xs mg:text-base px-2",
-        icon: Css,
-    },
-    NODE_JS: {
-        name: "node.js",
-        class: "rounded-full bg-white/5 hover:scale-110 transition hover:bg-white/10 border border-white/10 flex justify-center items-center mg:gap-x-4 mg:py-2 mg:px-4 py-1 text-xs mg:text-base px-2",
-        icon: Node,
-    },
-    MYSQL: {
-        name: "mysql",
-        class: "rounded-full bg-white/5 hover:scale-110 transition hover:bg-white/10 border border-white/10 flex justify-center items-center mg:gap-x-4 mg:py-2 mg:px-4 py-1 text-xs mg:text-base px-2",
-        icon: Sql,
-    },
-    TAILWIND: {
-        name: "Tailwind",
-        class: "rounded-full bg-white/5 hover:scale-110 transition hover:bg-white/10 border border-white/10 flex justify-center items-center mg:gap-x-4 mg:py-2 mg:px-4 py-1 text-xs mg:text-base px-2",
-        icon: Tailwind,
-    },
-    ReactRouter: {
-        name: "ReactRouter",
-        class: "rounded-full bg-white/5 hover:scale-110 transition hover:bg-white/10 border border-white/10 flex justify-center items-center mg:gap-x-4 mg:py-2 mg:px-4 py-1 text-xs mg:text-base px-2",
-        icon: ReactRouter,
-    },
-    TYPESCRYPT: {
-        name: "TypeScript",
-        class: "rounded-full bg-white/5 hover:scale-110 transition hover:bg-white/10 border border-white/10 flex justify-center items-center mg:gap-x-4 mg:py-2 mg:px-4 py-1 text-xs mg:text-base px-2",
-        icon: TypeScript,
-    },
-    REACT: {
-        name: "React",
-        class: "rounded-full bg-white/5 hover:scale-110 transition hover:bg-white/10 border border-white/10 flex justify-center items-center mg:gap-x-4 mg:py-2 mg:px-4 py-1 text-xs mg:text-base px-2",
-        icon: React,
-    },
-    TURSO: {
-        name: "TURSO",
-        class: "rounded-full bg-white/5 hover:scale-110 transition hover:bg-white/10 border border-white/10 flex justify-center items-center mg:gap-x-4 mg:py-2 mg:px-4 py-1 text-xs mg:text-base px-2",
-        icon: Turso,
-    },
-    NEXTJS: {
-        name: "NEXTJS",
-        class: "rounded-full bg-white/5 hover:scale-110 transition hover:bg-white/10 border border-white/10 flex justify-center items-center mg:gap-x-4 mg:py-2 mg:px-4 py-1 text-xs mg:text-base px-2",
-        icon: NextJs,
-    },
+  PHP: {
+    name: "PHP",
+    class:
+      "rounded-full bg-white/5 hover:scale-110 transition hover:bg-white/10 border border-white/10 flex justify-center items-center mg:gap-x-4 mg:py-2 mg:px-4 py-1 text-xs mg:text-base px-2",
+    icon: Php,
+  },
+  JS: {
+    name: "JS",
+    class:
+      "rounded-full bg-white/5 hover:scale-110 transition hover:bg-white/10 border border-white/10 flex justify-center items-center mg:gap-x-4 mg:py-2 mg:px-4 py-1 text-xs mg:text-base px-2",
+    icon: Js,
+  },
+  HTML: {
+    name: "html",
+    class:
+      "rounded-full bg-white/5 hover:scale-110 transition hover:bg-white/10 border border-white/10 flex justify-center items-center mg:gap-x-4 mg:py-2 mg:px-4 py-1 text-xs mg:text-base px-2",
+    icon: Html,
+  },
+  CSS: {
+    name: "css",
+    class:
+      "rounded-full bg-white/5 hover:scale-110 transition hover:bg-white/10 border border-white/10 flex justify-center items-center mg:gap-x-4 mg:py-2 mg:px-4 py-1 text-xs mg:text-base px-2",
+    icon: Css,
+  },
+  NODE_JS: {
+    name: "node.js",
+    class:
+      "rounded-full bg-white/5 hover:scale-110 transition hover:bg-white/10 border border-white/10 flex justify-center items-center mg:gap-x-4 mg:py-2 mg:px-4 py-1 text-xs mg:text-base px-2",
+    icon: Node,
+  },
+  MYSQL: {
+    name: "mysql",
+    class:
+      "rounded-full bg-white/5 hover:scale-110 transition hover:bg-white/10 border border-white/10 flex justify-center items-center mg:gap-x-4 mg:py-2 mg:px-4 py-1 text-xs mg:text-base px-2",
+    icon: Sql,
+  },
+  TAILWIND: {
+    name: "Tailwind",
+    class:
+      "rounded-full bg-white/5 hover:scale-110 transition hover:bg-white/10 border border-white/10 flex justify-center items-center mg:gap-x-4 mg:py-2 mg:px-4 py-1 text-xs mg:text-base px-2",
+    icon: Tailwind,
+  },
+  ReactRouter: {
+    name: "ReactRouter",
+    class:
+      "rounded-full bg-white/5 hover:scale-110 transition hover:bg-white/10 border border-white/10 flex justify-center items-center mg:gap-x-4 mg:py-2 mg:px-4 py-1 text-xs mg:text-base px-2",
+    icon: ReactRouter,
+  },
+  TYPESCRYPT: {
+    name: "TypeScript",
+    class:
+      "rounded-full bg-white/5 hover:scale-110 transition hover:bg-white/10 border border-white/10 flex justify-center items-center mg:gap-x-4 mg:py-2 mg:px-4 py-1 text-xs mg:text-base px-2",
+    icon: TypeScript,
+  },
+  REACT: {
+    name: "React",
+    class:
+      "rounded-full bg-white/5 hover:scale-110 transition hover:bg-white/10 border border-white/10 flex justify-center items-center mg:gap-x-4 mg:py-2 mg:px-4 py-1 text-xs mg:text-base px-2",
+    icon: React,
+  },
+  TURSO: {
+    name: "TURSO",
+    class:
+      "rounded-full bg-white/5 hover:scale-110 transition hover:bg-white/10 border border-white/10 flex justify-center items-center mg:gap-x-4 mg:py-2 mg:px-4 py-1 text-xs mg:text-base px-2",
+    icon: Turso,
+  },
+  NEXTJS: {
+    name: "NEXTJS",
+    class:
+      "rounded-full bg-white/5 hover:scale-110 transition hover:bg-white/10 border border-white/10 flex justify-center items-center mg:gap-x-4 mg:py-2 mg:px-4 py-1 text-xs mg:text-base px-2",
+    icon: NextJs,
+  },
 };
 
 const PROJECTS = [
-{
-        tittle: "Zdev la red social de desarrolladores",
-        description:
-            `Zdev es una red social diseñada específicamente para desarrolladores. En esta plataforma, puedes compartir fragmentos de código, participar en discusiones técnicas, publicar tus proyectos y mucho más. La aplicación está desarrollada con Next.js y utiliza Turso DB como base de datos principal. Cuenta con un sistema de recomendaciones personalizado que se adapta a tus lenguajes de programación favoritos. Además, todas las API routes están optimizadas con paginación, lo que garantiza un rendimiento eficiente incluso con grandes volúmenes de datos. zDev también incluye un sistema de notificaciones en tiempo real para mantenerte al tanto de las actualizaciones importantes, brindando una experiencia interactiva y dinámica.`,
-        img: "./project7.png",
-        tags: [TAGS.TYPESCRYPT, TAGS.NEXTJS, TAGS.TURSO],
-        github: "https://github.com/Drezxzx/zdev",
-        link: "https://zdev.es/",
-    },
-    {
-        tittle: "Translated.io",
-        description:
-            "Traductor creado en base a una api, que cuenta con todas las funcionalidaes de un traductor. Constuido con tecnologías frontend. Un diseño completamente responsive",
-        img: "./project2.png",
-        tags: [TAGS.TYPESCRYPT, TAGS.TAILWIND, TAGS.REACT, TAGS.NEXTJS],
-        github: "https://github.com/Drezxzx/tranlated.io",
-        link: "https://tranlated-io.vercel.app/",
-    },
-    {
-        tittle: "Acortador Url",
-        description:
-            "Acortador de urls, desarrollado completamente por mi, utilizando turso db para la base de datos.",
-        img: "./project5.png",
-        tags: [TAGS.TYPESCRYPT, TAGS.NEXTJS, TAGS.TURSO],
-        github: "https://github.com/Drezxzx/shorter-url",
-        link: "https://d-orcin-nine.vercel.app/",
-    },
-    {
-        tittle: "Coffe-landing-page",
-        description:
-            "Landing page creada con un api externa de una caféteria que muestra todos los productos de la caféteria y te permite ver los productos que estan disponibles y los que no.",
-        img: "./project1.png",
-        tags: [TAGS.TYPESCRYPT, TAGS.TAILWIND, TAGS.REACT],
-        github: "https://github.com/Drezxzx/coffe-landing-page",
-        link: "https://coffe-landing-page-lemon.vercel.app/",
-    },
-    
-    {
-        tittle: "Creador de codigosQR",
-        description:
-            "Creador de codigos QR, con un diseño minimalista y una interfaz de usuario muy amigable. Creado con tailwindcss y react, completamente responsive",
-        img: "./project6.png",
-        tags: [TAGS.TYPESCRYPT, TAGS.TAILWIND, TAGS.REACT, TAGS.NEXTJS],
-        github: "https://github.com/Drezxzx/qr-generator",
-        link: "https://qr-generator-eta-seven.vercel.app/",
-    },
-    {
-        tittle: "Tienda De Movíles",
-        description:
-            "Tienda completa desarrolada con react, que cuenta con las funcionalidades de login, carrito de compra, detalles de productos, busquedas y compras. Apoyada con una api propía",
-        img: "./project4.png",
-        tags: [
-            TAGS.JS,
-            TAGS.TAILWIND,
-            TAGS.TYPESCRYPT,
-            TAGS.ReactRouter,
-            TAGS.REACT,
-            TAGS.MYSQL,
-            TAGS.NODE_JS,
-        ],
-        github: "https://github.com/Drezxzx/Store-react",
-        link: "https://store-react-xi.vercel.app/",
-    },
+  {
+    tittle: "Zdev la red social de desarrolladores",
+    description: `Zdev es una red social diseñada específicamente para desarrolladores. En esta plataforma, puedes compartir fragmentos de código, participar en discusiones técnicas, publicar tus proyectos y mucho más. La aplicación está desarrollada con Next.js y utiliza Turso DB como base de datos principal. Cuenta con un sistema de recomendaciones personalizado que se adapta a tus lenguajes de programación favoritos. Además, todas las API routes están optimizadas con paginación, lo que garantiza un rendimiento eficiente incluso con grandes volúmenes de datos. zDev también incluye un sistema de notificaciones en tiempo real para mantenerte al tanto de las actualizaciones importantes, brindando una experiencia interactiva y dinámica.`,
+    img: "./project7.png",
+    tags: [TAGS.TYPESCRYPT, TAGS.NEXTJS, TAGS.TURSO],
+    github: "https://github.com/Drezxzx/zdev",
+    link: "https://zdev.es/",
+  },
+  {
+    tittle: "Toledo Viajes",
+    description: `
+        Es una página web diseñada para facilitar la planificación de viajes turísticos en Toledo. El sitio combina un diseño atractivo y funcional con una experiencia de usuario fluida, integrando componentes interactivos desarrollados con Next.js y Tailwind CSS. La plataforma está optimizada para rendimiento y despliegue eficiente en Vercel, garantizando tiempos de carga rápidos y una presentación visual profesional. 
+        `,
+    img: "./project8.png",
+    tags: [
+      TAGS.TAILWIND,
+      TAGS.TYPESCRYPT,
+      TAGS.NEXTJS,
+      TAGS.TURSO
+    ],
+    github: "https://github.com/Drezxzx/toledo-viajes",
+    link: "https://toledo-viajes.vercel.app/",
+  },
+  {
+    tittle: "Translated.io",
+    description:
+      "Traductor creado en base a una api, que cuenta con todas las funcionalidaes de un traductor. Constuido con tecnologías frontend. Un diseño completamente responsive",
+    img: "./project2.png",
+    tags: [TAGS.TYPESCRYPT, TAGS.TAILWIND, TAGS.REACT, TAGS.NEXTJS],
+    github: "https://github.com/Drezxzx/tranlated.io",
+    link: "https://tranlated-io.vercel.app/",
+  },
+  {
+    tittle: "Acortador Url",
+    description:
+      "Acortador de urls, desarrollado completamente por mi, utilizando turso db para la base de datos.",
+    img: "./project5.png",
+    tags: [TAGS.TYPESCRYPT, TAGS.NEXTJS, TAGS.TURSO],
+    github: "https://github.com/Drezxzx/shorter-url",
+    link: "https://d-orcin-nine.vercel.app/",
+  },
+  {
+    tittle: "Coffe-landing-page",
+    description:
+      "Landing page creada con un api externa de una caféteria que muestra todos los productos de la caféteria y te permite ver los productos que estan disponibles y los que no.",
+    img: "./project1.png",
+    tags: [TAGS.TYPESCRYPT, TAGS.TAILWIND, TAGS.REACT],
+    github: "https://github.com/Drezxzx/coffe-landing-page",
+    link: "https://coffe-landing-page-lemon.vercel.app/",
+  },
+
+  {
+    tittle: "Creador de codigosQR",
+    description:
+      "Creador de codigos QR, con un diseño minimalista y una interfaz de usuario muy amigable. Creado con tailwindcss y react, completamente responsive",
+    img: "./project6.png",
+    tags: [TAGS.TYPESCRYPT, TAGS.TAILWIND, TAGS.REACT, TAGS.NEXTJS],
+    github: "https://github.com/Drezxzx/qr-generator",
+    link: "https://qr-generator-eta-seven.vercel.app/",
+  },
+  
 ];
 ---
 
 <style>
-    .zoom-hover img:hover {
-        transform: scale(1.05);
-    }
+  .zoom-hover img:hover {
+    transform: scale(1.05);
+  }
 </style>
 
 {
-    PROJECTS.map(({ tittle, description, img, github, tags, link }) => (
-        <article class="size-30 mb-24">
-            <div>
-                <h3 class="md:text-2xl lg:text-3xl text-xl  flex flex-row justify-between mb-2 font-semibold text-purple-400/80 ">
-                    {tittle}{" "}
-                    <ul class="flex text-white flex-row gap-x-2">
-                        <li>
-                            <Social
-                                class=" bg-[#1f2937] hover:bg-[#242d39]"
-                                href={github}
-                            >
-                                <Github class="size-5 md:size-6 lg:size-7" />
-                                Repositorio
-                            </Social>
-                        </li>
-                        <li>
-                            <Social
-                                class="  bg-[#1f2937] hover:bg-[#242d39]"
-                                href={link}
-                            >
-                                <Preview class="size-5 md:size-6 lg:size-7" />
-                                Preview
-                            </Social>
-                        </li>
-                    </ul>
-                </h3>
-                <p class="text-base text-white  md:text-xl mb-4 md:mb-6 text-pretty">
-                    {description}{" "}
-                </p>
-                <ul class="flex flex-row gap-x-1 gap-3 md:gap-x-2 min-w-2 flex-wrap md:min-w-120  mb-2">
-                    {tags.map((tag) => (
-                        <li>
-                            <span
-                                class={` text-xs text-white font-semibold flex lg:gap-x-2 gap-x-1 items-center flex-row rounded-full py-1 px-2 ${tag.class}`}
-                            >
-                                <tag.icon class="size-5" />
-                                {tag.name}
-                            </span>
-                        </li>
-                    ))}
-                </ul>
-            </div>
+  PROJECTS.map(({ tittle, description, img, github, tags, link }) => (
+    <article class="size-30 mb-24">
+      <div>
+        <h3 class="md:text-2xl lg:text-3xl text-xl  flex flex-row justify-between mb-2 font-semibold text-purple-400/80 ">
+          {tittle}{" "}
+          <ul class="flex text-white flex-row gap-x-2">
+            <li>
+              <Social class=" bg-[#1f2937] hover:bg-[#242d39]" href={github}>
+                <Github class="size-5 md:size-6 lg:size-7" />
+                Repositorio
+              </Social>
+            </li>
+            <li>
+              <Social class="  bg-[#1f2937] hover:bg-[#242d39]" href={link}>
+                <Preview class="size-5 md:size-6 lg:size-7" />
+                Preview
+              </Social>
+            </li>
+          </ul>
+        </h3>
+        <p class="text-base text-white  md:text-xl mb-4 md:mb-6 text-pretty">
+          {description}{" "}
+        </p>
+        <ul class="flex flex-row gap-x-1 gap-3 md:gap-x-2 min-w-2 flex-wrap md:min-w-120  mb-2">
+          {tags.map((tag) => (
+            <li>
+              <span
+                class={` text-xs text-white font-semibold flex lg:gap-x-2 gap-x-1 items-center flex-row rounded-full py-1 px-2 ${tag.class}`}
+              >
+                <tag.icon class="size-5" />
+                {tag.name}
+              </span>
+            </li>
+          ))}
+        </ul>
+      </div>
 
-            <div class="overflow-hidden rounded shadow-2xl shadow-purple-400/20">
-                <img
-                    class="rounded object-cover transition-transform ease-in-out duration-300 hover:scale-[1.04]  "
-                    src={img}
-                    alt="Captura del proyecto"
-                />
-            </div>
-        </article>
-    ))
+      <div class="overflow-hidden rounded shadow-2xl shadow-purple-400/20">
+        <img
+          class="rounded object-cover transition-transform ease-in-out duration-300 hover:scale-[1.04]  "
+          src={img}
+          alt="Captura del proyecto"
+        />
+      </div>
+    </article>
+  ))
 }
